fix: Update default port to 4002 in configuration and documentation

--- a/api-tester.html
+++ b/api-tester.html
@@ -98,9 +98,8 @@
     <div class="container">
         <p>Use this form to test the Naukri Job Application API.</p>
 
-        <form id="apiForm">
-            <label for="apiUrl">API URL:</label>
-            <input type="url" id="apiUrl" name="apiUrl" value="http://localhost:3000/apply" required>
+        <form id="apiForm">            <label for="apiUrl">API URL:</label>
+            <input type="url" id="apiUrl" name="apiUrl" value="http://localhost:4002/apply" required>
 
             <label for="email">Naukri Email:</label>
             <input type="email" id="email" name="email" placeholder="Your Naukri login email" required>
